--- a/package.json
+++ b/package.json
@@ -1,46 +1,20 @@
 {
-  "name": "kintone-customization",
+  "name": "nodejs-template",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "build:prod": "webpack --mode production",
-    "build:dev": "webpack --devtool eval-source-map --output-pathinfo -w"
+  "engines": {
+    "node": ">=14.0.0"
   },
   "keywords": [],
   "repository": {},
   "author": "",
   "license": "MIT",
-  "description": "This is my kintone customization template.",
+  "description": "This is my nodejs template.",
   "devDependencies": {
-    "@babel/cli": "7.12.1",
-    "@babel/core": "7.12.3",
-    "@babel/preset-env": "7.12.1",
-    "@babel/preset-react": "7.12.1",
-    "@babel/preset-typescript": "7.12.1",
     "@cybozu/eslint-config": "11.0.1",
-    "babel-loader": "8.1.0",
-    "css-loader": "5.0.0",
     "eslint": "7.11.0",
     "eslint-loader": "4.0.2",
-    "node-sass": "4.14.1",
-    "prettier": "2.1.2",
-    "sass-loader": "10.0.3",
-    "style-loader": "2.0.0",
-    "typescript": "4.0.3",
-    "url-loader": "4.1.1",
-    "webpack": "5.1.3",
-    "webpack-cli": "4.1.0"
+    "prettier": "2.1.2"
   },
-  "dependencies": {
-    "@kintone/kintone-ui-component": "0.7.4",
-    "@kintone/rest-api-client": "1.6.0",
-    "core-js": "3.6.5",
-    "cross-env": "7.0.2",
-    "jquery": "3.5.1",
-    "luxon": "1.25.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "regenerator-runtime": "0.13.7",
-    "sweetalert2": "10.6.1"
-  }
+  "dependencies": {}
 }
