--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "devDependencies": {
     "@cybozu/eslint-config": "11.0.2",
     "eslint": "7.11.0",
-    "eslint-loader": "4.0.2",
     "prettier": "2.1.2"
+    "typescript": "^4.0.5
   },
   "dependencies": {}
 }
