--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@cybozu/eslint-config": "11.0.2",
     "eslint": "7.11.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
     "typescript": "^4.0.5
   },
   "dependencies": {}
