--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@cybozu/eslint-config": "11.0.2",
     "eslint": "7.11.0",
     "prettier": "2.1.2",
-    "typescript": "^4.0.5
+    "typescript": "^4.0.5"
   },
   "dependencies": {}
 }
