--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "MIT",
   "description": "This is my nodejs template.",
   "devDependencies": {
-    "@cybozu/eslint-config": "11.0.1",
-    "eslint": "7.11.0",
+    "@cybozu/eslint-config": "11.0.2",
+    "eslint": "7.13.0",
     "eslint-loader": "4.0.2",
+    "express-generator": "^4.16.1",
     "prettier": "2.1.2"
   },
   "dependencies": {}
