--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@cybozu/eslint-config": "11.0.4",
     "eslint": "7.22.0",
     "eslint-loader": "4.0.2",
-    "prettier": "2.2.1",
-    "typescript": "4.2.3"
-  },
-  "dependencies": {}
+    "prettier": "2.2.1"
+  }
 }
