--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "node": ">=12.0.0"
   },
   "keywords": [],
-  "repository": {},
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yanoshi-1009/nodejs-template"
+  },
+  "author": "y.idakko@gmail.com",
   "license": "MIT",
   "description": "This is my nodejs template.",
   "devDependencies": {
